# conda_subprocess

./: .coveragerc  .coveralls.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.ci_support/: environment-docs.yml  environment-old.yml  environment.yml  release.py
.github/workflows/: automerge.yml  black.yml  coverage.yml  deploy.yml  pipeline.yml  pypicheck.yml  unittests.yml  unittests_old.yml
binder/: environment.yml  postBuild
conda_subprocess/: __init__.py  _version.py  call.py  decorator.py  interface.py  popen.py  process.py
docs/: _config.yml  _toc.yml  api.rst
notebooks/: conda_subprocess_demo.ipynb  demo.ipynb
src/conda_subprocess/: decorator.py  interface.py  process.py
tests/: test_conda_function.py  test_conda_subprocess.py  test_process.py
